Added js folder

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         <div class="card">
             <h2>heima</h2>
             <h4><i>A family oriented lodging app</i></h4>
-            <p>loren ipsum loren ipsum loren ipsum loren ipsum loren ipsum loren ipsum loren ipsum loren ipsum loren ipsum loren ipsum loren ipsum loren ipsum loren ipsum loren ipsum loren ipsum loren ipsum loren ipsum loren ipsum </p>
+            <p>heima<i>(Icelandic for "home")</i> is a lodging app developed to address the many challenges travelling families face.</p>
             <button>Case Study</button>
             </div>
         </div>
@@ -100,8 +100,8 @@
         <div class="column">
         <div class="card">
             <h2>Qbicle</h2>
-            <h4><i>Become a pro at working from home</i></h4>
-            <p>loren ipsum loren ipsum loren ipsum loren ipsum loren ipsum loren ipsum loren ipsum loren ipsum loren ipsum loren ipsum loren ipsum loren ipsum loren ipsum loren ipsum loren ipsum loren ipsum loren ipsum loren ipsum </p>
+            <h4><i>Work. Life. Balance.</i></h4>
+            <p>Qbicle is a productivity and coaching app to help the ever-increasing population of professionals adjust to working from home.</p>
             <button>Case Study</button>
             </div>
         </div>
@@ -113,7 +113,7 @@
         <div class="card">
             <h2>American Homebrewers Association (AHA)</h2>
             <h4><i>A website redesign to drive membership in the time of COVID</i></h4>
-            <p>loren ipsum loren ipsum loren ipsum loren ipsum loren ipsum loren ipsum loren ipsum loren ipsum loren ipsum loren ipsum loren ipsum loren ipsum loren ipsum loren ipsum loren ipsum loren ipsum loren ipsum loren ipsum </p>
+            <p>This website redesign project is meant to increase membership enrollments through the website since the pandemic makes large events impossible.</p>
             <button>Case Study</button>
             </div>
         </div>
@@ -125,20 +125,8 @@
         <div class="card">
             <h2>Digital Sellers Guidebook</h2>
             <h4><i>Seller enablement in the digital age</i></h4>
-            <p>loren ipsum loren ipsum loren ipsum loren ipsum loren ipsum loren ipsum loren ipsum loren ipsum loren ipsum loren ipsum loren ipsum loren ipsum loren ipsum loren ipsum loren ipsum loren ipsum loren ipsum loren ipsum </p>
+            <p>The Digital Sellers Guidebook provides sellers with in-depth product overview pages, collections of tutorial videos, and a scenario-focused knowledge base.</p>
             <button>Case Study</button>
-            </div>
-        </div>
-    </div>
-</section>
-<section class="work">
-    <div class="row">
-        <div class="column">
-        <div class="card">
-            <h2>The Pantheon Project</h2>
-            <h4><i>An original graphic novel independantly crowdfunded and published</i></h4>
-            <p>loren ipsum loren ipsum loren ipsum loren ipsum loren ipsum loren ipsum loren ipsum loren ipsum loren ipsum loren ipsum loren ipsum loren ipsum loren ipsum loren ipsum loren ipsum loren ipsum loren ipsum loren ipsum </p>
-            <button>Discover The Pantheon Project</button>
             </div>
         </div>
     </div>
