--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <li><a href="#about">ABOUT</a></li>
         <li><a href="#work">WORK</a></li>
         <li><a href="#skills">SKILLS</a></li>
-        <li><a href="#about">ABOUT</a></li>
+        <li><a href="#connect">CONNECT</a></li>
       </ul>
     </header>
 <! About Section -->  
@@ -144,7 +144,7 @@
           <li><a href="#about">ABOUT</a></li>
           <li><a href="#work">WORK</a></li>
           <li><a href="#skills">SKILLS</a></li>
-          <li><a href="#about">ABOUT</a></li>
+          <li><a href="#connect">CONNECT</a></li>
       </ul>
     </footer>
   </body>
